<resources>
    <string name="app_name">WellnessBuddy</string>
    <string name="weather_card_title">5 Day Weather Forecast</string>
    <string name="zipcode_hint_text">zipcode</string>
    <string name="sunrise_label_text">Sunrise</string>
    <string name="precip_label_text">Precipitation</string>
    <string name="sunset_label_text">Sunset</string>
    <string name="recommended_activity_area_title">Recommended Activity</string>
    <string name="recommended_activity_short_desc_text">Touch Some Grass</string>
    <string name="recommended_activity_long_desc_text">Go outside and touch some grass It seems like you’ve been studying
        for five hours straight Go outside and touch some grass It seems
        like you’ve been studying for five hours straight</string>
    <string name="recommended_activity_button_text">Generate Random Activity</string>
    <string name="login_title_text">Wellness Buddy</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="retype_password_text">Re-type Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="register_title_text">New User?</string>
    <string name="existing_user_text">Existing User?</string>
    <string name="faculty">Faculty</string>
    <string name="student">Student</string>
    <string name="enter">Enter</string>
    <string name="logout">Logout</string>
    <string name="cloud_cover">Cloud Cover</string>
    <string name="_96">96</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="_2_mph">2 mph</string>
    <string name="miami_fl">Miami, FL</string>
    <string name="dec_23_tue">Dec 23, Tue</string>
    <string name="_21_c">21°C</string>
    <string name="high_temp">High Temp</string>
    <string name="_27_c">27°C</string>
    <string name="_19_c">19°C</string>
    <string name="low_temp">Low Temp</string>
    <string name="precipitation">Precipitation</string>
    <string name="_0_02_in">0.02 in</string>
    <string name="_4_6">4.6</string>
    <!-- TO-DO: check to see if any string values missing -->
</resources>