<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FacultyActivity">

    <LinearLayout
        android:id="@+id/top_level_faculty_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/forecast_faculty_card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_italic"
            android:text="@string/weather_card_title"
            android:textAlignment="center"
            android:textColor="@color/White_Out"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/zipcode_faculty_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/zipcode_faculty"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:autoText="false"
                android:autofillHints="33021"
                android:background="@color/White_Out"
                android:ems="10"
                android:fontFamily="@font/roboto_italic"
                android:hint="@string/zipcode_hint_text"
                android:inputType="number"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/Brenda_Gray"
                android:textSize="15sp"
                tools:ignore="Deprecated" />

            <Button
                android:id="@+id/zipcode_faculty_enter_button"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:fontFamily="@font/roboto_bold"
                android:padding="0dp"
                android:shadowColor="@color/Black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="10"
                android:text="@string/enter"
                android:textSize="12sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontal_faculty_card_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingTop="13dp" />

        <!-- TabLayout for dots indicator -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_dots_faculty"
            android:layout_width="80dp"
            android:layout_height="10dp"
            android:layout_marginTop="13dp"
            android:background="@android:color/transparent"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicator="@android:color/transparent" />

    </LinearLayout>

    <!--Custom toolbar added. Added at the bottom to have it layered on top-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_faculty"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/Beaver_Blue"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:title=""
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/toolbarLogo_faculty"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:contentDescription="@drawable/app_logo_transparent"
                android:src="@drawable/app_logo_transparent" />

            <Button
                android:id="@+id/logoutButton_faculty"
                android:layout_width="95dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="0dp"
                android:padding="0dp"
                android:shadowColor="@color/Black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="10"
                android:text="@string/logout"
                android:textSize="12sp" />

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>